--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
     "react-responsive-modal": "5.2.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "0.2.0",
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
