--- a/website/package.json
+++ b/website/package.json
@@ -15,12 +15,16 @@
     "react-responsive-modal": "5.2.6"
   },
   "devDependencies": {
+    "@mdx-js/loader": "1.6.21",
+    "@next/mdx": "10.0.1",
     "@tailwindcss/typography": "0.2.0",
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
     "babel-plugin-macros": "2.8.0",
     "babel-plugin-preval": "5.0.0",
+    "highlight.js": "10.3.2",
+    "remark-highlight.js": "6.0.0",
     "tailwindcss": "1.9.6",
     "typeface-inter": "1.1.13",
     "typescript": "4.0.5"
