--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -30,3 +30,4 @@ jobs:
       - uses: andresz1/size-limit-action@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          directory: react-responsive-modal
