--- a/website/package.json
+++ b/website/package.json
@@ -21,6 +21,7 @@
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
+    "fathom-client": "3.0.0",
     "highlight.js": "10.3.2",
     "rehype-autolink-headings": "5.0.1",
     "rehype-slug": "4.0.1",
