--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -47,16 +47,16 @@
   "size-limit": [
     {
       "path": "dist/react-responsive-modal.cjs.production.min.js",
-      "limit": "3.3 KB"
+      "limit": "3.8 KB"
     },
     {
       "path": "dist/react-responsive-modal.esm.js",
-      "limit": "3.3 KB"
+      "limit": "3.8 KB"
     }
   ],
   "dependencies": {
-    "classnames": "^2.2.6",
-    "no-scroll": "^2.1.1"
+    "body-scroll-lock": "^3.1.5",
+    "classnames": "^2.2.6"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17",
@@ -66,6 +66,7 @@
     "@size-limit/preset-small-lib": "4.7.0",
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.1.2",
+    "@types/body-scroll-lock": "2.6.1",
     "@types/classnames": "2.2.11",
     "@types/no-scroll": "2.1.0",
     "@types/node": "14.14.7",
