--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -55,6 +55,7 @@
     }
   ],
   "dependencies": {
+    "@bedrock-layout/use-forwarded-ref": "^1.1.4",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.2.6"
   },
