--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-responsive-modal",
+  "name": "@huksley/react-responsive-modal",
   "version": "6.1.0",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
@@ -47,11 +47,11 @@
   "size-limit": [
     {
       "path": "dist/react-responsive-modal.cjs.production.min.js",
-      "limit": "4.0 KB"
+      "limit": "4.1 KB"
     },
     {
       "path": "dist/react-responsive-modal.esm.js",
-      "limit": "4.0 KB"
+      "limit": "4.1 KB"
     }
   ],
   "dependencies": {
