--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -55,13 +55,12 @@
     }
   ],
   "dependencies": {
-    "@bedrock-layout/use-forwarded-ref": "^1.1.4",
     "body-scroll-lock": "^3.1.5",
-    "classnames": "^2.2.6"
+    "classnames": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17",
-    "react-dom": "^16.8.0 || ^17"
+    "react": "^16.8.0 || ^17 || ^18",
+    "react-dom": "^16.8.0 || ^17 || ^18"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "4.7.0",
