--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -16,6 +16,8 @@ jobs:
           release-type: node
           package-name: react-responsive-modal
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false},{"type":"docs","section":"Documentation","hidden":false},{"type":"test","section":"Tests","hidden":false}]'
+          extra-files: |
+            react-responsive-modal/package.json
 
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
