--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-responsive-modal",
-  "version": "6.3.2",
+  "version": "x-release-please-version",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
   "main": "dist/index.js",
