--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,40 +14,29 @@ jobs:
       - name: Begin CI...
         uses: actions/checkout@v2
 
-      - name: Use Node 12
-        uses: actions/setup-node@v1
+      - name: Use Node.js 16.x
+        uses: actions/setup-node@v2
         with:
-          node-version: 12.x
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-
-      - uses: actions/cache@v2
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          node-version: 16.x
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: pnpm install
 
       - name: Lint
-        run: yarn workspace react-responsive-modal lint
+        run: pnpm run lint --filter react-responsive-modal
 
       - name: Test
-        run: yarn workspace react-responsive-modal test --ci --coverage --maxWorkers=2
+        run: pnpm run lint test --ci --coverage --maxWorkers=2 --filter react-responsive-modal
 
       - name: Report coverage
         uses: codecov/codecov-action@v1
 
       - name: Build
-        run: yarn workspace react-responsive-modal build
+        run: pnpm run build --filter react-responsive-modal
 
       - name: Build docs
-        run: yarn workspace website build
+        run: pnpm run build --filter website
 
       - name: Cypress run
         uses: cypress-io/github-action@v2
@@ -56,4 +45,4 @@ jobs:
           install: false
           # Use monorepo
           project: ./react-responsive-modal
-          start: yarn workspace website start -p 3000
+          start: pnpm run start -p 3000 --filter website
