--- a/package.json
+++ b/package.json
@@ -3,26 +3,18 @@
   "scripts": {
     "prettier": "prettier --write \"**/*.{js,ts,tsx,css,scss,json,md,mdx,yml}\""
   },
-  "workspaces": [
-    "react-responsive-modal",
-    "website"
-  ],
   "prettier": {
     "singleQuote": true
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.{js,ts,tsx,css,scss,json,md,mdx,yml}": "prettier --write"
+    "*.{js,ts,tsx,css,scss,json,md,mdx,yml}": [
+      "prettier --write",
+      "git  add"
+    ]
   },
   "devDependencies": {
-    "husky": "4.3.0",
-    "lint-staged": "10.5.1",
+    "husky": "7.0.4",
+    "lint-staged": "12.1.7",
     "prettier": "2.1.2"
-  },
-  "version": "6.3.2",
-  "packageManager": "yarn@3.2.1"
+  }
 }
