--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-responsive-modal",
-  "version": "6.3.2",
+  "version": "6.3.0",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
   "main": "dist/index.js",
@@ -55,6 +55,7 @@
     }
   ],
   "dependencies": {
+    "@bedrock-layout/use-forwarded-ref": "^1.3.1",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1"
   },
