--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -9,7 +9,7 @@ jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v3.2
+      - uses: GoogleCloudPlatform/release-please-action@v3.7
         id: release
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -22,14 +22,15 @@ jobs:
       - uses: actions/checkout@v2
         if: ${{ steps.release.outputs.release_created }}
 
-      - name: Use Node 16
-        uses: actions/setup-node@v1
+      - name: Use Node 18
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: '18'
+          cache: 'yarn'
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Install dependencies
-        run: yarn install --immutable
+        run: yarn install --frozen-lockfile --immutable
         if: ${{ steps.release.outputs.release_created }}
 
       - name: Build react-responsive-modal
