--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -55,32 +55,33 @@
     }
   ],
   "dependencies": {
-    "@bedrock-layout/use-forwarded-ref": "^1.3.1",
+    "@bedrock-layout/use-forwarded-ref": "^2.0.17",
     "body-scroll-lock": "^3.1.5",
     "classnames": "^2.3.1"
   },
   "peerDependencies": {
-    "react": "^16.8.0 || ^17 || ^18",
-    "react-dom": "^16.8.0 || ^17 || ^18"
+    "react": "^16.8.0 || ^17 || ^18 || ^19",
+    "react-dom": "*"
   },
   "devDependencies": {
-    "@size-limit/preset-small-lib": "4.7.0",
-    "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/react": "11.1.2",
-    "@types/body-scroll-lock": "2.6.1",
-    "@types/classnames": "2.2.11",
-    "@types/node": "14.14.7",
-    "@types/react": "16.9.56",
-    "@types/react-dom": "16.9.9",
+    "@size-limit/preset-small-lib": "11.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@types/body-scroll-lock": "3.1.2",
+    "@types/classnames": "2.3.4",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "babel-jest": "26.6.3",
     "cypress": "5.6.0",
-    "husky": "4.3.0",
+    "husky": "9.1.7",
     "prettier": "2.1.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "size-limit": "4.7.0",
+    "react": "^19",
+    "react-dom": "^19",
+    "size-limit": "11.2.0",
     "tsdx": "0.14.1",
-    "tslib": "2.0.3",
-    "typescript": "4.0.5"
+    "tslib": "2.8.1",
+    "typescript": "5.8.3"
   }
 }
