--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -8,7 +8,7 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdown",
     "test": "tsdx test --passWithNoTests",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
@@ -77,8 +77,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "size-limit": "11.2.0",
+    "tsdown": "0.12.9",
     "tsdx": "0.14.1",
     "tslib": "2.8.1",
-    "typescript": "4.0.5"
+    "typescript": "5.8.3"
   }
 }
