--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -3,8 +3,9 @@
   "version": "6.4.1",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/react-responsive-modal.esm.js",
+  "type": "commonjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "tsdx watch",
@@ -37,7 +38,11 @@
     "mobile",
     "flex"
   ],
-  "repository": "git+https://github.com/pradel/react-responsive-modal.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pradel/react-responsive-modal.git",
+    "directory": "react-responsive-modal"
+  },
   "author": "Léo Pradel",
   "bugs": {
     "url": "https://github.com/pradel/react-responsive-modal/issues"
@@ -74,6 +79,7 @@
     "@types/react-dom": "16.9.9",
     "babel-jest": "26.6.3",
     "cypress": "5.6.0",
+    "publint": "0.3.12",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "size-limit": "11.2.0",
@@ -81,5 +87,13 @@
     "tsdx": "0.14.1",
     "tslib": "2.8.1",
     "typescript": "5.8.3"
+  },
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
   }
 }
