--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -52,12 +52,12 @@
   "funding": "https://github.com/sponsors/pradel",
   "size-limit": [
     {
-      "path": "dist/react-responsive-modal.cjs.production.min.js",
-      "limit": "4.1 KB"
+      "path": "dist/index.js",
+      "limit": "4.0 KB"
     },
     {
-      "path": "dist/react-responsive-modal.esm.js",
-      "limit": "4.1 KB"
+      "path": "dist/index.mjs",
+      "limit": "3.6 KB"
     }
   ],
   "dependencies": {
