--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -3,17 +3,16 @@
   "version": "6.4.1",
   "description": "A simple responsive and accessible react modal",
   "license": "MIT",
-  "type": "commonjs",
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "start": "tsdx watch",
+    "start": "tsdown --watch",
     "build": "tsdown",
     "typecheck": "tsc --noEmit",
-    "test": "tsdx test --passWithNoTests",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "test": "vitest",
+    "prepare": "tsdown",
     "size": "size-limit"
   },
   "files": [
@@ -21,17 +20,6 @@
     "src",
     "styles.css"
   ],
-  "jest": {
-    "setupFilesAfterEnv": [
-      "./__tests__/setupTests.ts"
-    ],
-    "modulePathIgnorePatterns": [
-      "cypress"
-    ],
-    "coveragePathIgnorePatterns": [
-      "src/lib"
-    ]
-  },
   "keywords": [
     "react",
     "responsive",
@@ -71,29 +59,31 @@
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "11.2.0",
-    "@testing-library/jest-dom": "5.11.6",
-    "@testing-library/react": "11.1.2",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
     "@types/body-scroll-lock": "2.6.1",
     "@types/classnames": "2.2.11",
     "@types/node": "14.14.7",
     "@types/react": "16.9.56",
     "@types/react-dom": "16.9.9",
-    "babel-jest": "26.6.3",
+    "@vitejs/plugin-react": "4.6.0",
     "cypress": "5.6.0",
+    "jsdom": "26.1.0",
     "publint": "0.3.12",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "size-limit": "11.2.0",
     "tsdown": "0.12.9",
-    "tsdx": "0.14.1",
     "tslib": "2.8.1",
-    "typescript": "5.8.3"
+    "typescript": "5.8.3",
+    "vitest": "3.2.4"
   },
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index.d.cts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
     "./package.json": "./package.json"
   }
