--- a/react-responsive-modal/package.json
+++ b/react-responsive-modal/package.json
@@ -41,11 +41,11 @@
   "size-limit": [
     {
       "path": "dist/index.js",
-      "limit": "4.0 KB"
+      "limit": "3.6 KB"
     },
     {
-      "path": "dist/index.mjs",
-      "limit": "3.6 KB"
+      "path": "dist/index.cjs",
+      "limit": "4.0 KB"
     }
   ],
   "dependencies": {
